--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ call the the plugin on a container wish you wish
         });     </code></pre>
             
             <div class="col-md-6"><div id="CalcOptoins"></div></div>
-            <div class="col-md-6">
+            <div class="col-md-6 wel text-center">
             	
             	  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal_button_form">
 			<input type="hidden" name="cmd" value="_donations">
